--- a/static/index.htm
+++ b/static/index.htm
@@ -132,7 +132,7 @@
                                                     <div class="as-accordion-content">
                                                         <ul class="as-search-filter-items  as-filter-text-type    ">
                                                             <li class="as-filter-item       ">
-                                                                <a href="https://my-app.pabloabal.now.sh/index.htm" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_12_9_2, " role="checkbox" aria-checked="false">
+                                                                <a href="" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_12_9_2, " role="checkbox" aria-checked="false">
 
                                                                     <span class="as-filter-name">
                                                                         <span class="as-search-filter-content">
@@ -144,7 +144,7 @@
                                                                 </a>
                                                             </li>
                                                             <li class="as-filter-item       ">
-                                                                <a href="https://my-app.pabloabal.now.sh/index.htm" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_12_9, " role="checkbox" aria-checked="false">
+                                                                <a href="" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_12_9, " role="checkbox" aria-checked="false">
 
                                                                     <span class="as-filter-name">
                                                                         <span class="as-search-filter-content">
@@ -156,7 +156,7 @@
                                                                 </a>
                                                             </li>
                                                             <li class="as-filter-item       ">
-                                                                <a href="https://my-app.pabloabal.now.sh/index.htm" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_10_5, " role="checkbox" aria-checked="false">
+                                                                <a href="" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_10_5, " role="checkbox" aria-checked="false">
 
                                                                     <span class="as-filter-name">
                                                                         <span class="as-search-filter-content">
@@ -168,7 +168,7 @@
                                                                 </a>
                                                             </li>
                                                             <li class="as-filter-item       ">
-                                                                <a href="https://my-app.pabloabal.now.sh/index.htm" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_9_7, " role="checkbox" aria-checked="false">
+                                                                <a href="" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipadpro_9_7, " role="checkbox" aria-checked="false">
 
                                                                     <span class="as-filter-name">
                                                                         <span class="as-search-filter-content">
@@ -180,7 +180,7 @@
                                                                 </a>
                                                             </li>
                                                             <li class="as-filter-item       ">
-                                                                <a href="https://my-app.pabloabal.now.sh/index.htm" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipad_9_7, " role="checkbox" aria-checked="false">
+                                                                <a href="" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipad_9_7, " role="checkbox" aria-checked="false">
 
                                                                     <span class="as-filter-name">
                                                                         <span class="as-search-filter-content">
@@ -192,7 +192,7 @@
                                                                 </a>
                                                             </li>
                                                             <li class="as-filter-item       ">
-                                                                <a href="https://my-app.pabloabal.now.sh/index.htm" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipad6gen, " role="checkbox" aria-checked="false">
+                                                                <a href="" class="as-filter-option  " aria-disabled="false" tabindex="0" data-tracking="ipadCompatibility=ipad6gen, " role="checkbox" aria-checked="false">
 
                                                                     <span class="as-filter-name">
                                                                         <span class="as-search-filter-content">
